--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,10 @@
+[build]
+  publish = "dist"
+  command = "npm run build"
+
+[build.processing]
+  skip_processing = true
+
 [[headers]]
   for = "*.js"
   [headers.values]
@@ -5,10 +12,5 @@
 
 [[headers]]
   for = "*.mjs"
-  [headers.values]
-    Content-Type = "text/javascript"
-
-[[headers]]
-  for = "/assets/*.js"
   [headers.values]
     Content-Type = "text/javascript"
